# poker-hand

./: LICENSE  cabal.project  poker-hand.cabal
src/Poker/: Card.hs  Codec.hs  Evaluate.hs  Rank.hs  Sort.hs  Suit.hs  Types.hs
test/: Main.hs
