cabal-version: 2.4
name: poker-hand
version: 0.1.0.0
synopsis: Score poker hands
-- description:
bug-reports: https://github.com/andrewthad/poker-hand/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2021 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Poker.Card
    Poker.Evaluate
    Poker.Rank
    Poker.Sort
    Poker.Suit
    Poker.Types
  build-depends:
    , base >=4.12 && <4.15
    , primitive
    , contiguous
    , text
    , run-st
    , primitive-unlifted >=0.1.3 && <0.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , bytestring
    , primitive
    , tasty >=1.2.3 && <1.3
    , tasty-hunit >=0.10.0.2 && <0.11
    , tasty-quickcheck >=0.10.1.2
    , QuickCheck >=2.14.2
    , text >=1.2
    , unordered-containers
    , poker-hand
